# OpenOversight

./: .buildinfo  .dockerignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  README_OLD.md  advanced_csv_import.html  area_coordinator.html  bulk_upload.html  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  genindex.html  index.html  justfile  objects.inv  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js
.doctrees/: advanced_csv_import.doctree  area_coordinator.doctree  bulk_upload.doctree  environment.pickle  index.doctree
.github/workflows/: build_docs.yml  main.yml  publish.yml  pull_request.yml
OpenOversight/app/: __init__.py  commands.py  filters.py  models.py  utils.py  widgets.py
OpenOversight/app/auth/: utils.py  views.py
OpenOversight/app/main/: downloads.py  forms.py  model_view.py  views.py
OpenOversight/app/models/: config.py  database.py  database_imports.py
OpenOversight/app/templates/: 403.html  404.html  413.html  429.html  500.html  about.html  add_edit_department.html  add_officer.html  base.html  browse.html  cop_face.html  cop_face_disambiguate.html  description_detail.html  edit_assignment.html  incident_detail.html  incident_list.html  index.html  input_find_officer.html  label_data.html  link_delete.html  list_officer.html  note_detail.html  officer.html  privacy.html  profile.html  sort.html  submit_image.html  tag.html  tutorial.html
OpenOversight/app/utils/: cloud.py  forms.py  general.py
OpenOversight/migrations/: env.py
OpenOversight/migrations/versions/: 2018-08-13-1308_9e2827dae28c_add_cascading_foreign_key_constraint_to_.py  2022-01-05-0601_93fc3e074dcc_remove_link_length_cap.py  2022-10-15-0526_8fc4d110de2c_add_date_created_and_date_updated_.py  2023-08-01-1905_b38c133bed3c_add_created_by_and_created_at_columns.py  2023-08-21-0300_a35aa1a114fa_add_create_and_last_update_columns.py  7ab3268ad68d_is_public.py
OpenOversight/tests/: conftest.py  test_commands.py  test_filters.py  test_functional.py  test_models.py  test_utils.py
OpenOversight/tests/routes/: route_helpers.py  test_descriptions.py  test_image_tagging.py  test_incidents.py  test_notes.py  test_officer_and_department.py  test_user_api.py
_static/: alabaster.css
data-munging/: assignments.py  demographic_data.py  first_employed_date.py  integrate_latest_roster.py  spd_2020_salary_data.py  spd_2021_salary_data.py
docs/: administrator.rst  advanced_csv_import.md  conf.py  index.rst
(+7 files in other folders)
