[tool.poetry]
name = "openoversight"
version = "1.8.0"
description = ""
authors = ["OrcaCollective"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
authlib = "1.3.0"
boto3 = "1.28.39"
cachetools = "5.3.2"
email-validator = "2.1.0.post1"
flask = "3.0.0"
flask-bootstrap = "3.3.7.1"
flask-compress = "1.14"
flask-limiter = "3.3.1"
flask-login = "0.6.3"
flask-mail = "0.9.1"
flask-migrate = "4.0.4"
flask-sitemap = "0.4.0"
flask-sqlalchemy = "3.0.3"
flask-wtf = "1.2.1"
future = "0.18.3"
google-api-python-client = "2.92.0"
gunicorn = "21.2.0"
pillow = "10.1.0"
psycopg2-binary = "2.9.9"
python-dateutil = "2.8.2"
sqlalchemy = "2.0.23"
us = "3.1.1"
wtforms = "3.1.1"
wtforms-sqlalchemy = "0.3"

[tool.poetry.group.dev.dependencies]
faker = "22.6.0"
flake8 = "7.0.0"
ipython = "^8.22.1"
mypy = "1.4.1"
myst-parser = "2.0.0"
pandas = "^2.2.1"
pre-commit = "3.5.0"
pytest = "7.4.3"
pytest-cov = "4.1.0"
pytest-env = "1.0.1"
pytest-flake8 = "1.1.1"
pytest-sugar = "0.9.7"
pytest-xdist = "3.2.1"
selenium = "4.17.2"
sphinx = "7.0.1"
sphinx-autobuild = "2021.3.14"
webdriver-manager = "3.8.6"
xvfbwrapper = "0.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
