[tool.poetry]
name = "openoversight"
version = "1.8.0"
description = ""
authors = ["OrcaCollective"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
authlib = "1.3.1"
bootstrap-flask = "2.4.1"
boto3 = "1.35.53"
cachetools = "5.5.0"
email-validator = "2.2.0"
flask = "3.0.3"
flask-compress = "1.14"
flask-limiter = "3.8.0"
flask-login = "0.6.3"
flask-mail = "0.9.1"
flask-migrate = "4.0.7"
flask-sitemap = "0.4.0"
flask-sqlalchemy = "3.0.3"
flask-wtf = "1.2.1"
google-api-python-client = "2.127.0"
gunicorn = "23.0.0"
pillow = "10.3.0"
psycopg2-binary = "2.9.9"
python-dateutil = "2.9.0.post0"
sqlalchemy = "2.0.32"
us = "3.1.1"
wtforms = "3.1.2"
wtforms-sqlalchemy = "0.3"

[tool.poetry.group.dev.dependencies]
faker = "28.1.0"
flake8 = "7.1.1"
ipython = "^8.30.0"
mypy = "1.13.0"
myst-parser = "3.0.1"
pandas = "^2.2.1"
pre-commit = "4.0.1"
pytest = "8.3.4"
pytest-cov = "6.0.0"
pytest-env = "1.0.1"
pytest-flake8 = "1.3.0"
pytest-sugar = "1.0.0"
pytest-xdist = "3.2.1"
selenium = "4.28.1"
sphinx = "7.3.7"
sphinx-autobuild = "2024.2.4"
webdriver-manager = "4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
